fix styling to full width on mobile

--- a/secure-upload.css
+++ b/secure-upload.css
@@ -46,7 +46,7 @@
 
 						@media only screen and (max-width: 768px) {
 							div#secure-upload-page form {
-								margin-bottom: 100%;
+								width: 100%;
 							}
 						}
 
